--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div id="page">
-    <img src="" alt="">
+    <img src="./assets/main-image.png" alt="Imagem de cupcakes de café com chantilly">
     <main>
       <section id="about">
         <h1>Cupcake de café com chantilly</h1>
