--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="pt-br">
 
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Página de Receita</title>
+
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Alice&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -53,7 +57,7 @@
           Para o recheio, leve todos os ingredientes ao fogo médio, mexendo bem até engrossar. Desligue, deixe esfriar e
           coloque dentro de um saco de confeiteiro com bico perle. Reserve. Coloque o chantilly dentro de um saco de
           confeiteiro com bico pitanga e reserve.<br> <br>
-          
+
           Para a montagem, faça um furo no centro dos cupcakes e recheie com o brigadeiro de café reservado. Decore as
           superfícies dos cupcakes com o chantilly reservado, fazendo círculos. Decore com grãos de café e leve à
           geladeira até o momento de servir.
