--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
     </main>
   </div>
 
+  <footer>
+    Feito com
+    <img src="./assets/heart.svg" alt="Coração">
+    pela Rocketseat
+  </footer>
+
 </body>
 
 </html>
